--- a/Open-ILS/xul/staff_client/server/locale/en-US/cat.properties
+++ b/Open-ILS/xul/staff_client/server/locale/en-US/cat.properties
@@ -69,3 +69,34 @@ staff.cat.copy_browser.list_init.volume_count=Volumes
 staff.cat.copy_browser.list_init.copy_count=Copies
 staff.cat.copy_browser.actions.error=Copy Browser Actions
 staff.cat.copy_browser.refresh_list.error=Problem refreshing the volume/copy tree.
+staff.cat.copy_buckets.render_pending_copies.complete=Action completed.
+staff.cat.copy_buckets.retrieve_row.error=Error retrieving details for item with copy id = %1$s
+staff.cat.copy_buckets.menulist.render.choose_bucket=Choose a bucket...
+staff.cat.copy_buckets.menulist.render.retrieve_bucket=Retrieve shared bucket...
+staff.cat.copy_buckets.menulist.change_bucket.prompt=Enter bucket number:
+staff.cat.copy_buckets.menulist.change_bucket.undefined=Could not find a bucket with ID = %1$s
+staff.cat.copy_buckets.menulist.change_bucket.error=Error retrieving bucket.  Did you use a valid bucket id?
+staff.cat.copy_buckets.copy_buckets_add.error=Addition likely failed.
+staff.cat.copy_buckets.copy_buckets_sel_add.error=Addition likely failed.
+staff.cat.copy_buckets.copy_buckets_delete_item.error=Deletion likely failed.
+staff.cat.copy_buckets.copy_buckets_delete_item.complete=Action completed.
+staff.cat.copy_buckets.copy_buckets_delete_bucket.confirm=Delete the bucket named %1$s?
+staff.cat.copy_buckets.copy_buckets_delete_bucket.complete=Action completed.
+staff.cat.copy_buckets.copy_buckets_delete_bucket.error=Bucket deletion likely failed.
+staff.cat.copy_buckets.copy_buckets_new_bucket.prompt=What would you like to name the bucket?
+staff.cat.copy_buckets.copy_buckets_new_bucket.title=Bucket Creation
+staff.cat.copy_buckets.copy_buckets_new_bucket.container_exists=You already have a bucket with that name.
+staff.cat.copy_buckets.copy_buckets_new_bucket.success=Bucket "%1$s" created.
+staff.cat.copy_buckets.copy_buckets_new_bucket.error=Bucket creation failed.
+staff.cat.copy_buckets.batch.error=Batch Item Deletion
+staff.cat.copy_buckets.copy_buckets_transfer_to_volume.no_volume=Please mark a volume as the destination from within the copy browser and then try this again.
+staff.cat.copy_buckets.copy_buckets_transfer_to_volume.confirm=Transfer the items in bucket "%1$s" from their original volumes to the volume labelled "%2$s" for the library "%3$s" on the following record?
+staff.cat.copy_buckets.copy_buckets_transfer_to_volume.error=Items not likely transferred.
+staff.cat.copy_buckets.cmd_export_to_copy_status.error=Copy Status from Copy Buckets
+staff.cat.copy_buckets.prep_item_for_list.error=List building failed.
+staff.cat.copy_buckets_quick.bucket_prompt=Copy this item into which bucket?
+staff.cat.copy_buckets_quick.bucket_prompt.plural=Copy these %1$s items into which bucket?
+staff.cat.copy_buckets_quick.copy_buckets_new_bucket.prompt=What would you like to name the bucket?
+staff.cat.copy_buckets_quick.copy_buckets_new_bucket.title=Bucket Creation
+staff.cat.copy_buckets_quick.copy_buckets_new_bucket.error=Bucket creation failed.
+staff.cat.copy_buckets_quick.addition.error=Addition likely failed for bucket = %1$s and copy ID = %2$s.
