25% of the way through i18n of copy_editor.js

--- a/Open-ILS/xul/staff_client/server/locale/en-US/cat.properties
+++ b/Open-ILS/xul/staff_client/server/locale/en-US/cat.properties
@@ -100,3 +100,23 @@ staff.cat.copy_buckets_quick.copy_buckets_new_bucket.prompt=What would you like 
 staff.cat.copy_buckets_quick.copy_buckets_new_bucket.title=Bucket Creation
 staff.cat.copy_buckets_quick.copy_buckets_new_bucket.error=Bucket creation failed.
 staff.cat.copy_buckets_quick.addition.error=Addition likely failed for bucket = %1$s and copy ID = %2$s.
+staff.cat.copy_editor.caption=Copy Editor
+staff.cat.copy_editor.create_copies=Create Copies
+staff.cat.copy_editor.status=Status
+staff.cat.copy_editor.retrieve_templates.error=Error retrieving templates
+staff.cat.copy_editor.apply_templates.error=Error applying template
+staff.cat.copy_editor.save_as_template.prompt=Enter template name:
+staff.cat.copy_editor.save_as_template.title=Save As Template
+staff.cat.copy_editor.save_as_template.success=Template "%1$s" saved.
+staff.cat.copy_editor.save_as_template.error=Error saving template
+staff.cat.copy_editor.delete_template.confirm=Delete template "%1$s"?
+staff.cat.copy_editor.delete_template.success=Template "%1$s" deleted.
+staff.cat.copy_editor.delete_template.error=Error deleting template
+staff.cat.copy_editor.export_templates.title=Save Templates File As
+staff.cat.copy_editor.export_templates.error=Error exporting templates
+staff.cat.copy_editor.import_templates.title=Import Templates File
+staff.cat.copy_editor.import_templates.replace.prompt=Replace the existing template with the imported template?
+staff.cat.copy_editor.import_templates.replace.title=Template %1$s already exists.
+staff.cat.copy_editor.import_templates.replace.yes=Yes
+staff.cat.copy_editor.import_templates.replace.no=No
+staff.cat.copy_editor.import_templates.replace.click_here=Click here
