--- a/Open-ILS/xul/staff_client/server/locale/en-US/cat.properties
+++ b/Open-ILS/xul/staff_client/server/locale/en-US/cat.properties
@@ -120,3 +120,23 @@ staff.cat.copy_editor.import_templates.replace.title=Template %1$s already exist
 staff.cat.copy_editor.import_templates.replace.yes=Yes
 staff.cat.copy_editor.import_templates.replace.no=No
 staff.cat.copy_editor.import_templates.replace.click_here=Click here
+staff.cat.copy_editor.import_templates.save.prompt=Save all of these imported templates permanently to this account?
+staff.cat.copy_editor.import_templates.save.title=Final warning
+staff.cat.copy_editor.import_templates.save.yes=Yes
+staff.cat.copy_editor.import_templates.save.no=No
+staff.cat.copy_editor.import_templates.save.click_here=Click here
+staff.cat.copy_editor.import_templates.save.success=All templates saved.
+staff.cat.copy_editor.import_templates.save.error=Error saving templates
+staff.cat.copy_editor.import_templates.note=Note: These imported templates will get saved along with any new template you try to create, but if that does not happen, then these templates will disappear with the next invocation of the item attribute editor.
+staff.cat.copy_editor.import_templates.error=Error importing templates
+staff.cat.copy_editor.apply_owning_lib.undefined_volume.error=Error retrieving Volume information for copy %1$s.  The owning library for this copy will not be changed.
+staff.cat.copy_editor.apply_owning_lib.call_number.error=Error changing owning library for copy %1$s.  The owning library for this copy will not be changed.
+staff.cat.copy_editor.copy_count=1 copy
+staff.cat.copy_editor.copy_count.plural=%1$s copies
+staff.cat.copy_editor.apply.label=Apply
+staff.cat.copy_editor.apply.accesskey=A
+staff.cat.copy_editor.cancel.label=Cancel
+staff.cat.copy_editor.handle_update.success=Items were added or modified.
+staff.cat.copy_editor.handle_update.error=copy update error:
+staff.cat.copy_editor.add_stat_cat.error=Error adding statistical category to display definition
+staff.cat.copy_editor.populate_stat_cat.error=Error populating statistical categories for display
