i18n for copy_notes.xul

--- a/Open-ILS/xul/staff_client/server/locale/en-US/cat.properties
+++ b/Open-ILS/xul/staff_client/server/locale/en-US/cat.properties
@@ -140,3 +140,26 @@ staff.cat.copy_editor.handle_update.success=Items were added or modified.
 staff.cat.copy_editor.handle_update.error=copy update error:
 staff.cat.copy_editor.add_stat_cat.error=Error adding statistical category to display definition
 staff.cat.copy_editor.populate_stat_cat.error=Error populating statistical categories for display
+staff.cat.copy_notes.render_notes.label=Add New Note
+staff.cat.copy_notes.render_notes.accesskey=A
+staff.cat.copy_notes.widgets_apply.note_id=Note ID:
+staff.cat.copy_notes.widgets_apply.creator_id=Creator ID:
+staff.cat.copy_notes.widgets.public=Public
+staff.cat.copy_notes.widgets.private=Private
+staff.cat.copy_notes.delete_note.label=Delete This Note
+staff.cat.copy_notes.delete_note.prompt.msg=Delete the note titled "%1$s" created on %2$s?
+staff.cat.copy_notes.delete_note.prompt.title=Delete Note
+staff.cat.copy_notes.delete_note.prompt.yes=Yes
+staff.cat.copy_notes.delete_note.prompt.no=No
+staff.cat.copy_notes.delete_note.success=Note deleted.
+staff.cat.copy_notes.delete_note.close_window=Close Window
+staff.cat.copy_notes.new_note.label=New Note
+staff.cat.copy_notes.new_note.public=Public?
+staff.cat.copy_notes.new_note.title=Title
+staff.cat.copy_notes.new_note.note=Note
+staff.cat.copy_notes.new_note.cancel.label=Cancel
+staff.cat.copy_notes.new_note.cancel.accesskey=C
+staff.cat.copy_notes.new_note.add_note.label=Add Note
+staff.cat.copy_notes.new_note.add_note.accesskey=A
+staff.cat.copy_notes.new_note.success=Note added.
+staff.cat.copy_notes.new_note.error=The note was not likely created.
