i18n for copy_summary

--- a/Open-ILS/xul/staff_client/server/locale/en-US/cat.properties
+++ b/Open-ILS/xul/staff_client/server/locale/en-US/cat.properties
@@ -163,3 +163,9 @@ staff.cat.copy_notes.new_note.add_note.label=Add Note
 staff.cat.copy_notes.new_note.add_note.accesskey=A
 staff.cat.copy_notes.new_note.success=Note added.
 staff.cat.copy_notes.new_note.error=The note was not likely created.
+staff.cat.copy_summary.copy_id=Copy ID = %1$s
+staff.cat.copy_summary.total_circs.label=Total Circs
+staff.cat.copy_summary.yes=Yes
+staff.cat.copy_summary.no=No
+staff.cat.copy_summary.unset=<Unset>
+staff.cat.copy_summary.not_cataloged=Not Cataloged
