--- a/Open-ILS/web/opac/locale/en-US/lang.dtd
+++ b/Open-ILS/web/opac/locale/en-US/lang.dtd
@@ -1866,3 +1866,20 @@
 <!ENTITY staff.cat.copy_editor.save.accesskey "M">
 <!ENTITY staff.cat.copy_editor.cancel.label "Close">
 <!ENTITY staff.cat.copy_editor.cancel.accesskey "C">
+<!ENTITY staff.cat.copy_summary.label "Item Summary">
+<!ENTITY staff.cat.copy_summary.barcode.label "Barcode:">
+<!ENTITY staff.cat.copy_summary.location.label "Location:">
+<!ENTITY staff.cat.copy_summary.call_number.label "Call Number:">
+<!ENTITY staff.cat.copy_summary.status.label "Status:">
+<!ENTITY staff.cat.copy_summary.circulate.label "Circulate:">
+<!ENTITY staff.cat.copy_summary.reference.label "Reference:">
+<!ENTITY staff.cat.copy_summary.holdable.label "Holdable:">
+<!ENTITY staff.cat.copy_summary.opac_visible.label "OPAC Visible:">
+<!ENTITY staff.cat.copy_summary.created.label "Created:">
+<!ENTITY staff.cat.copy_summary.edited.label "Edited:">
+<!ENTITY staff.cat.copy_summary.age_protect.label "Age Protect:">
+<!ENTITY staff.cat.copy_summary.total_circs.label "Total Circs:">
+<!ENTITY staff.cat.copy_summary.alternate_view.label "Alternate View">
+<!ENTITY staff.cat.copy_summary.save_columns.label "Save Columns">
+<!ENTITY staff.cat.copy_summary.sel_clip.label "Copy to Clipboard">
+<!ENTITY staff.cat.copy_summary.print_export.label "Print Export">
