--- a/Open-ILS/xul/staff_client/server/locale/en-US/cat.properties
+++ b/Open-ILS/xul/staff_client/server/locale/en-US/cat.properties
@@ -169,3 +169,11 @@ staff.cat.copy_summary.yes=Yes
 staff.cat.copy_summary.no=No
 staff.cat.copy_summary.unset=<Unset>
 staff.cat.copy_summary.not_cataloged=Not Cataloged
+staff.cat.marcedit.help.add_row=Add Row: CTRL+Enter
+staff.cat.marcedit.help.insert_row=Insert Row: CTRL+Shift+Enter
+staff.cat.marcedit.help.add_subfield=Add Subfield: CTRL+D
+staff.cat.marcedit.help.remove_row=Remove Row: CTRL+Del
+staff.cat.marcedit.help.remove_subfield=Remove Subfield: SHIFT+Del
+staff.cat.marcedit.help.replace_006=Create/Replace 006: CTRL+F6
+staff.cat.marcedit.help.replace_007=Create/Replace 007: CTRL+F7
+staff.cat.marcedit.help.replace_008=Create/Replace 008: CTRL+F8
