--- a/Open-ILS/web/opac/locale/en-US/lang.dtd
+++ b/Open-ILS/web/opac/locale/en-US/lang.dtd
@@ -1883,6 +1883,7 @@
 <!ENTITY staff.cat.copy_summary.save_columns.label "Save Columns">
 <!ENTITY staff.cat.copy_summary.sel_clip.label "Copy to Clipboard">
 <!ENTITY staff.cat.copy_summary.print_export.label "Print Export">
+<!ENTITY staff.cat.marcedit.options.label "Options">
 <!ENTITY staff.cat.marcedit.stackSubfields.label "Stack subfields">
 <!ENTITY staff.cat.marcedit.stackSubfields.accesskey "s">
 <!ENTITY staff.cat.marcedit.validate.label "Validate">
