i18n for the MARC editor Note that marcedit.js doesn't like messagecatalog calls for some reason

--- a/Open-ILS/xul/staff_client/server/locale/en-US/cat.properties
+++ b/Open-ILS/xul/staff_client/server/locale/en-US/cat.properties
@@ -177,3 +177,19 @@ staff.cat.marcedit.help.remove_subfield=Remove Subfield: SHIFT+Del
 staff.cat.marcedit.help.replace_006=Create/Replace 006: CTRL+F6
 staff.cat.marcedit.help.replace_007=Create/Replace 007: CTRL+F7
 staff.cat.marcedit.help.replace_008=Create/Replace 008: CTRL+F8
+staff.cat.marcedit.save.label=Save Record
+staff.cat.marcedit.marcTag.LDR.label=MARC Leader
+staff.cat.marcedit.add_row.label=Add Row
+staff.cat.marcedit.remove_row.label=Remove Row
+staff.cat.marcedit.replace_006.label=Add/Replace 006
+staff.cat.marcedit.replace_007.label=Add/Replace 007
+staff.cat.marcedit.replace_008.label=Add/Replace 008
+staff.cat.marcedit.not_authority_field.label=Not a controlled subfield
+staff.cat.marcedit.apply_selected.label=Apply Selected
+staff.cat.marcedit.no_authority_match.label=No matching authority records found
+staff.cat.marc_new.create_record.label=Create Record
+staff.cat.marc_new.system_local.label=System Local
+staff.cat.marc_new.record_created.label=Record created.
+staff.cat.marc_new.retrieving.label=Retrieving title...
+staff.cat.marc_new.creating_record.error=Error creating MARC record.
+staff.cat.marc_new.loading_template.error=Error loading MARC template: %1$s
