i18n patch from Craig Ricciuto (Laurentian University):
opac.xul: Converted a string that was missed
record_buckets.js: Converted a string that was missed

cat.properties: Added the variables and values for the missed strings from above files

--- a/Open-ILS/xul/staff_client/server/locale/en-US/cat.properties
+++ b/Open-ILS/xul/staff_client/server/locale/en-US/cat.properties
@@ -196,6 +196,7 @@ staff.cat.marc_new.loading_template.error=Error loading MARC template: %1$s
 staff.cat.opac.set_marc_edit.alert=Record successfully saved.
 staff.cat.opac.set_marc_edit.std_unexpected_error=Record not likely updated.
 staff.cat.opac.refresh.function_not_implemented.alert=Not yet implemented.  Work around: Choose Duplicate in New Tab option
+staff.cat.opac.set_tab_name=Bib Record: %1$s
 staff.cat.record_buckets.save_file_as=Save File As
 staff.cat.record_buckets.export_records.alert=File not downloaded.
 staff.cat.record_buckets.export_records.std_unexpected_error=Records could not be exported.
@@ -206,6 +207,7 @@ staff.cat.record_buckets.menulist_placeholder.item1=Choose a bucket...
 staff.cat.record_buckets.menulist_placeholder.item2=Retrieve shared bucket...
 staff.cat.record_buckets.change_bucket.bucket_id=Enter bucket number:
 staff.cat.record_buckets.change_bucket.error=Error retrieving bucket.  Did you use a valid bucket ID?
+staff.cat.record_buckets.delete_bucket_named=Delete the bucket named %1$s?
 staff.cat.record_buckets.new_bucket.bucket_prompt=What would you like to name the bucket?
 staff.cat.record_buckets.new_bucket.bucket_prompt_title=Bucket Creation
 staff.cat.record_buckets.new_bucket.same_name_alert=You already have a bucket with that name.
